--- a/面试/面试押题.md
+++ b/面试/面试押题.md
@@ -18,8 +18,8 @@
 * 切片扩容的源码逻辑
 
 1. 如果期望容量是当前容量的两倍就用期望容量
-2. 如果期望容量小于1024就用double容量
-3. 如果大于1024就循环每次增加25%, 直到新容量大于期望容量
+2. 如果期望容量小于等于二倍当前容量 且 当前切片长度小于1024就用double容量
+3. 如果期望容量小于等于二倍当前容量 且 当前切片长度大于等于1024就循环每次增加25%, 直到新容量大于期望容量
 
 * 切片append之后的逻辑
 
