--- a/interview/network/基础.md
+++ b/interview/network/基础.md
@@ -13,7 +13,7 @@ TCP/IP四层模型：应用层， 传输层， 网际层，网络接口层
 表示层： 数据的安全，表示，压缩。 确保一个系统的应用层所发送的数据可以被另一个系统应用层读取
 会话层：建立，管理， 终止会话， 是应用程序和网络之间的接口
 传输层：提供源端口和目的端口可靠透明数据传输，为不同主机上的进程间提供逻辑通信
-网络层：将网络地址翻译成物理地址，实现不同网络间的路径选择， 常见协议有：ICMP（互联网控制消息协议）， IGMP（互联网管理协议），IP
+网络层：将网络地址翻译成物理地址，实现不同网络间的路径选择，解决主机到主机间的通信问题，常见协议有：ICMP（互联网控制消息协议）， IGMP（互联网管理协议），IP
 数据链路层： 在物理层提供比特流服务的基础上， 提供相邻节点之间的数据链路
 物理层: 建立，维护，断开物理链接
 
