数据在网络模型中的流转

--- a/interview/network/基础.md
+++ b/interview/network/基础.md
@@ -8,7 +8,7 @@ TCP/IP四层模型：应用层， 传输层， 网际层，网络接口层
 简单说， OSI七层模型是理论上的网络通信模型， TCP/IP四层模型是实际使用的网络通信模型，5层结构是为了解释网络原理而折中的网络通信模型
 > OSI七层模型
 
-国际化标准组织制定的用于计算机或通信设备互联的标准体系
+国际化标准组织制定的用于计算机或通信设备互联的标准体系 
 应用层: 应用层协议制定的是应用进程间通信和交互的协议规则，常见的协议有：HTTP，FTP， DNS， SMTP（邮件服务），SNMP（简单网络管理，解决远程管理网络设备）
 表示层： 数据的安全，表示，压缩。 确保一个系统的应用层所发送的数据可以被另一个系统应用层读取
 会话层：建立，管理， 终止会话， 是应用程序和网络之间的接口
@@ -17,3 +17,23 @@ TCP/IP四层模型：应用层， 传输层， 网际层，网络接口层
 数据链路层： 在物理层提供比特流服务的基础上， 提供相邻节点之间的数据链路
 物理层: 建立，维护，断开物理链接
 
+### 说下每层模型对应的网络协议
+应用层：Http，DNS，FTP，NFS（网络文件系统协议），WAIS（互联网协议7，在internet上搜索信息的深层方式），SMTP（简单邮件服务协议），
+telnet（使用虚拟终端的形式，提供双向，以文字字符串为主的命令行接口交互功能），SNMP（简单网络管理，解决远程管理网络设备）
+表示层：TIFF， JPEG，GIF， PICT
+会话层：RPC，SQL，NFS，NetBios， names，appleTalk
+传输层：TCP，UDP
+网络层：IP， ICMP（网络中设备用于数据传输相关问题的协议，主要用途之一是数据是否在正确时间到达目的地），
+ARP（地址解析协议，将IP地址转换为mac地址的协议），RAPP（将mac地址转换成IP地址的协议），
+RIP（简单内部网关协议），IPX（互联网分组交换协议，提供分组寻址和选择路由的功能，保证可靠到达）
+数据链路层：FDDI（在光缆上发送数字信号的协议），Frame Relay（公用数据网通用协议），HDLC（点到点数据透明传输），PPP（两点建立链接）
+物理层：EIA/TIA（232），EIA/TIA（232）
+
+### 数据在各层是如何传输的
+对于发送方，从上层至下层层层包装。 对于接收方， 从下层到上层层层解包装
+* 发送方的应用程序向接收方应用程序发送数据
+* AP先将数据交给本机的应用层，应用层将数据加上控制信息H5，交给传输层
+* 传输层将数据添加控制信息H4，交给网络层
+* 网络层将数据添加控制信息H3，交给数据链路层
+* 数据链路层将控制单元分成两部分，H2 T2，分别加到数据单元的首尾
+* 最后的物理层，进行比特流的传输
