--- a/interview/network/基础.md
+++ b/interview/network/基础.md
@@ -138,5 +138,63 @@ tcp建立长链接后， 闲置时间超过tcp_keepalive_time， 就会发送侦
 # 客户端怎么验证证书的合法性
 CA颁发证书时，会在证书上添加数字签名1， 客户端用同样的hash算法和CA公钥生成签名2， 签名1 == 签名2 证书就是合法的
 
-# 
+# TCP 三次握手
+初始，客户端和服务端都处于CLOED状态， 服务端监听客户端的请求，变为listen状态
+第一次握手，客户端发起请求，（syn=1， seq=1），状态变成syn_sent
+第二次握手，服务端收到请求，发送ack=1，syn 给客户端，状态变成syn_rev
+第三次握手，客户端收到请求，发送ack状态变成established，服务器收到请求，状态同样变成established
+
+# 只有两次会怎样
+1. 资源浪费
+2. 接收过期失效请求发生错误
+第二次握手服务器会发送ack等数据给客户端，如果这次包丢了客户端没有接收到， 没有第三次握手的确认，服务器会认为链接可用并一直开着端口，并且在客户端超时重传下次链接来的时候开启新端口来接收，这样就造成了很多资源的浪费
+
+# 四次呢？
+三次足够，四次浪费
+
+# 三次每一次没有收到报文的情况
+第一次服务端没收到syn， 客户端一直重传， 服务端不做反应
+第二次客户端没有收到服务端的ack， 客户端一直重传，服务端阻塞在accept
+第三次服务端没有收到客户端的ack，服务端一直重传，客户端以为已经建立好链接，将数据发送过去，服务端收到数据发送RST，告知客户端没有准备好
+
+# 第二次握手传回了ack， 为什么要传回syn
+ack是确认收到客户端发送的握手报文， syn告诉客户端，服务器收到的确实是客户端发来的
+
+# 第三次握手可以携带收据吗
+可以， 第三次握手客户端已经处于established 状态，此时链接已经建立成功， 能携带数据，但不携带数据处于安全考虑，攻击者每次在syn中携带大量数据新，会造成cpu和内存损耗
+
+# 说说半链接队列和syn flood攻击的关系
+半链接队列: 在服务器回复ack + syn变成syn_REVD状态之后就会被放到syn队列（半链接队列）
+全链接队列：完成三次握手的链接会放到全链接队列， 等待应用取走
+
+flood攻击：就是在第一次握手时，攻击这不断发送syn包，服务器收不到ack，就不会释放syn队列中的旧链接，从而占满syn队列（半链接队列），导致后续正常链接无法处理
+应对办法： 
+syn cookie：根据数据包的原地址，端口等信息构建cookie， 将其作为syn发送，收到后正确验证后建立链接，否则丢弃该包
+syn proxy： 防火墙收到ack后建立真正链接， 否则不建立
+
+# 四次挥手过程
+数据交互完成后，两端都可以发起断开链接请求，这里假定客户端发起
+初始状态： 两端都处于established
+第一次挥手：客户端发起fin=1 seq=u，此时状态变成fin_wait1
+第二次挥手：服务端发起ack=1， 此时服务端状态变成closed_wait, 客户端接收后变成fin_wait2状态
+第三次挥手：服务端发起fin=1 ack=1， 此时服务端状态变成Last_ack状态，
+第四次挥手: 客户端发起ack， 并处于time_wait 等待2msl （报文在网络中一来一回的最大时间）没有收到服务端的ack就关闭链接，服务端收到ack同样关闭链接变成closed状态
+
+# 断开链接为什么要四次
+从fin包的发送就能得知： 
+在客户端发送fin时，服务端会先发一个ack，处理完手头的事务
+处理完后，再发fin + ack 告诉客户端处理完了，我同意断开链接
+服务端ack和fin是分开传送的， 所以断开链接要比建立链接多一次挥手的过程
+
+# 为什么要等待2msl
+1. 为了让客户端的确认链接真的到达服务端，因为如果没有到达，服务端会在这个时间内重新发送第三次握手的fin，客户端收到后会重置time_wait的时间，继续等待
+2. 为了能让此链接所有历史数据在网络中消失，这样下一次链接就不会出现受上一次历史链接的脏数据了
+
+# 为什么是2msl
+报文最大生存时间，超过这个时间会被丢弃， 报文在网络中一来一回的最大传输时间
+
+# 什么是保活计时器（keepalive timer）
+建立TCP链接后，如果客户端突然挂了，服务器应该有措施断开链接释放资源，保活计时器就是为了解决这种场景的
+每次收到客户端的数据，时间就会重置，keepalive timer 一般会保持两个小时，而后服务器会发送探活侦测包，每隔75秒发送10次仍得不到回应会断开链接释放资源
+
 
