--- a/interview/network/基础.md
+++ b/interview/network/基础.md
@@ -197,4 +197,68 @@ syn proxy： 防火墙收到ack后建立真正链接， 否则不建立
 建立TCP链接后，如果客户端突然挂了，服务器应该有措施断开链接释放资源，保活计时器就是为了解决这种场景的
 每次收到客户端的数据，时间就会重置，keepalive timer 一般会保持两个小时，而后服务器会发送探活侦测包，每隔75秒发送10次仍得不到回应会断开链接释放资源
 
+# TCP的报文首部的格式
+16位端口号：源端口号，目标端口号，
+32位序号：一次TCP通信（从建立到链接）过程中，某一个传输方向上的字节流的每个字节的编号
+32位确认号：用作另一方发送的报文段的响应，收到报文序号+1
+4位首部长度：标识TCP头部有多少个32bit字（4字节），4位最大表示15， 头部最长60字节
+6位标志位：URG（紧急指针是否有效），ack（表示序列号是否有效），PSH（缓冲区尚未填满），RST（表示要求对方重新建立链接），SYN（建立链接信息标志位），FIN（表示告知对方本端要关闭链接了）
+16位窗口大小：流量控制的手段，这里指的是接收窗口，他告诉对方本端的缓冲区还能容纳多少字节的数据，这样对方就可以控制发送的速度
+16位校验和：由发送端填充，接收端利用CRC算法验证数据是否损坏，这个校验既包含tco头部，又包含数据
+16位紧急指针： 一个正的偏移量，相对当前序号的偏移，不妨称之为紧急便宜，是发送端向接收端发送紧急数据的方法
+
+# TCP如何保证可靠性
+链接管理，检验和，序列号/确认应答号，超时重传，最大消息长度，滑动窗口
+1. 链接管理： 三次握手，四次挥手
+2. 校验和：接收端和发送端校验和一致，否则丢弃包
+3. 序列号/确认应答：TCP给每个包编号，接收方会对发送方进行应答，发送方就会知道接收方是否收到对应的包，如果没有收到就会重发，这样能保证数据的完整性
+4. 流量控制： 滑动窗口
+5. 最大消息长度： 
+6. 超时重传
+7. 拥塞控制：当网络非常拥堵的时候，会引起丢包问题，为此TCP引入慢启动，先发送少量数据，探路之后再决定以多大速度来传输数据 
+
+# 流量控制
+初始状态，双方在三次握手时，规定两端窗口为400字节
+1.发送方发送200字节，next指针向后偏移200字节，发送窗口变小，接收方收到200字节数据并放入缓冲区，返回给发送方win=200
+2.发送方又发送200字节的数据，由于接收方只能处理100字节，接收方400-200-100 = 100 返回win=100
+3.发送方又发送100字节的数据，这时接收方缓冲区为0，返回win=0
+4.发送方停止发送，创建定时任务问询， 什么时候接收方有处理能力再次发送
+
+# TCP滑动窗口
+TCP如果使用串行的模式，发送并接收应答之后才能继续发送， 这样效率就很慢，为此TCP引入滑动窗口，就是TCP头部的16位的窗口大小（win），窗口大小表示不需要等待应答，可以发送该数据的最大值
+TCP滑动窗口分两种：发送窗口，接收窗口
+
+概念：
+发送窗口分为四部分：已发送已确认部分，已发送未确认，未发送可以发送，未发送但不可以发
+三个指针：SND.WIN（窗口大小）,SND.UNA（绝对指针：已发送未确认的第一个序号）,SND.NXT（下一个发送位置：未发送可以发送的第一个序号）
+
+
+接收窗口分为三部分：已成功接收并已确认， 未接收但可以接收，未接受不能接收部分
+两个指针: REV.WIN(接收窗口大小)， REV.NXT(下一个接收位置，下一个未接收但可以接收的第一个序号)
+
+# nagle算法， 延迟确认
+作用： 为了解决大货车拉小货，浪费的问题，IP头20字节，TCP头20字节，但只有几字节的有效数据
+nagle算法：任意时刻，只能有一个未确认的小段，（小段：小于MSS的数据段，未确认：未收到ACK的数据）
+策略： 
+* 没有已发送未确认报文时，立刻发送数据
+* 有已发送未确认报文时，等待 【没有已发送未确认报文】或 【报文大小大于MSS】，再发送数据
+如果没有达到上述任一条件，数据会囤积，知道满足上述条件
+
+延迟确认
+没有携带数据的ack也是很浪费资源的，为了解决这个问题
+策略：
+* 当有响应数据时，ack跟随响应数据一起发送
+* 如果没有响应数据，ack会等待一段时间，看是否有响应数据一起发送
+* 如果下一条请求到达，ack会立即发送
+
+nagle和延迟确认不能一起使用，会带来性能瓶颈
+
+# TCP拥塞控制
+在网络拥塞时，发送数据，可能会导致网络包数据延迟，丢包等， 这时TCP就会重传，但是这会导致更严重的拥塞
+为此拥塞控制出现，维护一个拥塞窗口变量cwnd， 发送窗口（swnd）约定于接收窗口（rwnd），有了拥塞窗口，swnd = min(cwnd, rwnd)
+拥塞控制常用算法： 慢启动，拥塞避免，拥塞发生，快速回复
+发生过程： 慢启动 -> 拥塞避免 -> 拥塞发生 -> 快速回复 -> 拥塞避免
+
+概念：
+慢启动：TCP刚开始发送请求的时候会cwnd=1（单位是MSS）， 即先发送小包探探路， 如果没有丢包现象，就继续，当收到一个ACK, cwnd++, 每轮呈指数级增长，如果出现丢包，cwnd减半，进入拥塞避免阶段
 
