--- a/interview/network/基础.md
+++ b/interview/network/基础.md
@@ -260,5 +260,33 @@ nagle和延迟确认不能一起使用，会带来性能瓶颈
 发生过程： 慢启动 -> 拥塞避免 -> 拥塞发生 -> 快速回复 -> 拥塞避免
 
 概念：
-慢启动：TCP刚开始发送请求的时候会cwnd=1（单位是MSS）， 即先发送小包探探路， 如果没有丢包现象，就继续，当收到一个ACK, cwnd++, 每轮呈指数级增长，如果出现丢包，cwnd减半，进入拥塞避免阶段
+慢启动：TCP刚开始发送请求的时候会cwnd=1（单位是MSS）， 即先发送小包探探路， 如果没有丢包现象，就继续，当收到一个ACK, cwnd++, 每轮呈指数级增长，
+如果出现丢包（cwnd减半）或达到ssthresh（慢启动阈值，一般65535），进入拥塞避免阶段
+拥塞避免：cwnd增长逻辑变化，成为线性提升的算法
+* 每收到一个ack cwnd = cwnd + 1/cwnd
+* 每过一个RTT（网络请求往返时间），cwnd = cwnd + 1
 
+拥塞发生
+当网络发生丢包时，会有两种情况：RTO重传，快速重传
+RTO时，拥塞算法策略：
+* 慢启动阈值：ssthresh /=2
+* cwnd 重置 = 1
+* 进入新的慢启动阶段
+
+快速重传
+发送方收到3个相同的ack，进入快速重传，快速回复算法
+* cwnd/=2 ；ssthresh = cwnd
+* cwnd = sshthresh +3
+* 重传重复的那几个ack
+* 如果再收到重复的ack，cwnd += 1
+* 如果收到新的数据ack，cwnd = sshthresh， 这时候已经恢复，网络不再拥塞
+此时进入拥塞避免阶段
+
+# TCP重传机制
+概念：超时重传，快速重传，带选择确认的重传（sack），重传sack四种
+超时重传：发送端发送数据后会立即开启一个计时器，如果超过一定时间没有收到ack，就会重新发送，知道成功收到ack为止
+超时时间设置： RTT（Rount-Trip Time， 往返时间）数据包在网络请求的往返时间
+RTO超时重传时间：略大于RTT最佳，算法略
+缺点: 
+
+# 快速重传
